# mini-code

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README-zh.md  README.md  code.py  legacy_entry.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
deploy/lambda/: Dockerfile  README.md  demo.html  handler.py  local_invoke.py  minicode-demo.service  nginx.conf  server.py
deploy/langfuse/: .env.example  docker-compose.yml
docs/adr/: 0001-self-hosted-langfuse-tracing.md
evals/: README.md  __init__.py  harness.py  runner.py
evals/tasks/fix-palindrome/: task.json  verify.py
evals/tasks/fix-palindrome/workspace/: palindrome.py
evals/tasks/implement-anagram/: task.json  verify.py
evals/tasks/implement-anagram/workspace/: anagram.py
minicode/: __init__.py  __main__.py  background.py  bus.py  compaction.py  config.py  content.py  cron.py  hooks.py  loop.py  mcp.py  recovery.py  registry.py  skills.py  subagent.py  tasks.py  teams.py  terminal.py  tools.py  tracing.py  worktrees.py
tests/: test_evals.py  test_minicode_package.py
