[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minicode"
version = "1.0.0"
description = "Minimal coding agent: tasks, worktrees, skills, teams, cron, MCP in one layered package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "langfuse>=3.0.0",
]

[project.scripts]
minicode = "minicode.__main__:main"

[tool.setuptools]
packages = ["minicode"]
